syntax = "proto3";
package proto;
option go_package = ".;rpcdemo";

message SimpleRequest {
  string data = 1;
}

message StreamResponse {
  string stream_value = 1;
}

service StreamServer {
  rpc ListValue(SimpleRequest) returns (stream StreamResponse){};
}

